# python-project-50

./: .codeclimate.yml  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
gendiff/: __init__.py  gendiff.py  generate_diff.py  parser.py  utility.py
gendiff/formatters/: __init__.py  json_f.py  plain.py  stylish.py
gendiff/scripts/: entry_point.py  gendiff.py
tests/: expectations.py  test_flat.py  test_flat_json.py  test_formatters.py  test_results.py  test_stylish.py
tests/fixtures/: flat_test3.json  flat_test3.yml  flat_test4.json  flat_test4.yml  nested1.yml  nested2.yml  nested_test2.yml  nested_test3.json  nested_test3.yml  nested_test4.json  nested_test4.yml  test_file3.json  test_file3.yml  test_file4.yml
tests/fixtures/expectations/: json_flat  json_nested  stylish_nested
