[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = "Educational project of finding differences between two files"
authors = ["Vorobyev <nikos1997@yandex.ru>"]
readme = "README.md"
classifiers = ["Topic :: Education :: Testing",
               "Topic :: Software Development :: Libraries :: Python Modules"]
packages = [{include = "gendiff"}]
repository = 'https://github.com/proggressor/python-project-50'

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"